style: Add nova font para títulos, padrão size font e add o aruivo main.scss na cfg do nuxt

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -9,3 +9,9 @@
   src: url('/Quicksand-Bold.ttf');
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'title-bold';
+  src: url('/PlayfairDisplay-Bold.ttf');
+  font-display: swap;
+}
