--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -124,6 +124,11 @@ body {
   background-color: $grey-2;
   color: $grey-1;
   font-family: 'font-regular', Arial, sans-serif;
+  font-size: 16px;
+
+  @media (min-width: map-get($breakpoints, lg)) {
+    font-size: 18px;
+  }
 }
 
 strong {
