style: Altera paleta de cor

--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -121,7 +121,7 @@ q:after {
 }
 
 body {
-  background-color: $grey-2;
+  background-color: $primary;
   color: $grey-1;
   font-family: 'font-regular', Arial, sans-serif;
   font-size: 16px;
