--- a/assets/scss/base/_variable.scss
+++ b/assets/scss/base/_variable.scss
@@ -1,6 +1,7 @@
-$primary: #2c98f0;
+$primary: #383838;
+$secondary: #2c98f0;
 $grey-1: #d9dadb;
-$grey-2: #383838;
+$grey-2: #3f3f3f;
 $white: #fff;
 $black: #000000;
 
